--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+/* general reset */
+
 *,
 *::before,
 *::after {
@@ -6,6 +8,41 @@
   box-sizing: inherit;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
+  min-height: 100vh;
+
+  font-size: 1.8rem;
+  line-height: 1.5;
+
   box-sizing: border-box;
+}
+
+img,
+picture {
+  display: block;
+  max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* remove animations when turned off */
+
+@media (prefers-reduced-motion: reduce) {
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.1ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
 }
