--- a/index.css
+++ b/index.css
@@ -46,3 +46,33 @@ select {
     scroll-behavior: auto !important;
   }
 }
+
+/* utility */
+
+.flex {
+  display: flex;
+  gap: var(--gap, 1.6rem);
+}
+
+.grid {
+  display: grid;
+  gap: var(--gap, 1.6rem);
+}
+
+.container {
+  max-width: 80rem;
+  margin-inline: auto;
+  padding-inline: 2em;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
