--- a/index.css
+++ b/index.css
@@ -137,7 +137,7 @@ p {
   font-size: 1.6rem;
 }
 
-@media (min-width: 45em) {
+@media (min-width: 35em) {
   .grid-container--home h1 {
     font-size: 2rem;
   }
@@ -347,8 +347,43 @@ p {
   transform: scale(1.6);
 }
 
+.mobile-nav-toggle {
+  cursor: pointer;
+}
+
 .primary-navigation {
-  list-style: none;
+  --underline-gap: 3.2rem;
+  padding: 0;
+  background-color: hsla(var(--clr-black) / 0.98);
+}
+
+@supports (backdrop-filter: blur(4rem)) {
+  .primary-navigation {
+    background-color: hsla(var(--clr-white) / 0.04);
+    backdrop-filter: blur(4rem);
+  }
+}
+
+@media (max-width: 35em) {
+  .primary-navigation {
+    position: fixed;
+    flex-direction: column;
+    padding-block: min(32rem, 10vh);
+    padding-inline: 3.2rem 2.6rem;
+
+    list-style: none;
+    inset: 0 0 0 20%;
+    z-index: 9999;
+  }
+
+  .primary-navigation {
+    --gap: 2rem;
+    --underline-gap: 1.2rem;
+  }
+
+  .primary-navigation.underline-indicators .active > *::after {
+    display: none;
+  }
 }
 
 .primary-navigation a {
