--- a/index.css
+++ b/index.css
@@ -348,6 +348,17 @@ p {
   transform: scale(1.6);
 }
 
+/* primary header */
+
+.primary-header {
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo {
+  margin: 2.4rem clamp(2.4rem, 5vw, 5.5rem);
+}
+
 .mobile-nav-toggle {
   display: none;
 
@@ -358,10 +369,21 @@ p {
 
 .primary-navigation {
   --underline-gap: 3.2rem;
+  --gap: clamp(2.4rem, 5vw, 4.8rem);
+
   padding: 0;
   background-color: hsla(var(--clr-black) / 0.98);
 
   list-style: none;
+}
+
+.primary-navigation a {
+  text-decoration: none;
+}
+
+.primary-navigation a > span {
+  font-weight: 700;
+  margin-right: 0.8rem;
 }
 
 @supports (backdrop-filter: blur(4rem)) {
@@ -421,13 +443,42 @@ p {
   }
 }
 
-.primary-navigation a {
-  text-decoration: none;
+@media (min-width: 35em) {
+  .primary-navigation {
+    padding-inline: clamp(4.6rem, 6vw, 12.8rem);
+  }
 }
 
-.primary-navigation a > span {
-  font-weight: 700;
-  margin-right: 0.8rem;
+@media (min-width: 35em) and (max-width: 45em) {
+  .primary-navigation a > span {
+    display: none;
+  }
+}
+
+@media (min-width: 45em) {
+  .primary-header::after {
+    position: relative;
+
+    display: block;
+    transform: translateX(4.2rem);
+    width: 100%;
+    height: 1px;
+
+    background-color: hsla(var(--clr-white) / 0.25);
+
+    content: "";
+    order: 1;
+    z-index: 2;
+  }
+
+  nav {
+    order: 2;
+    z-index: 1;
+  }
+
+  .primary-navigation {
+    margin-block: 4rem;
+  }
 }
 
 .underline-indicators li > * {
