--- a/index.css
+++ b/index.css
@@ -122,59 +122,6 @@ p {
   padding-inline: 2em;
 }
 
-.grid-container {
-  display: grid;
-  place-items: center;
-  padding-inline: 1.6rem;
-
-  text-align: center;
-}
-
-.grid-container > * {
-  max-width: 45ch;
-}
-
-.grid-container--home h1 {
-  font-size: 1.6rem;
-}
-
-@media (min-width: 35em) {
-  .grid-container--home h1 {
-    font-size: 2rem;
-  }
-}
-
-@media (min-width: 45em) {
-  .grid-container {
-    display: grid;
-    column-gap: var(--container-gap, 3.2rem);
-    grid-template-columns: minmax(1.6rem, 1fr) repeat(2, minmax(0, 64rem)) minmax(
-        1.6rem,
-        1fr
-      );
-    padding-inline: unset;
-
-    text-align: left;
-  }
-
-  .grid-container > *:first-child {
-    grid-column: 2 / 3;
-  }
-
-  .grid-container > *:last-child {
-    grid-column: 3 / 4;
-  }
-
-  .grid-container--home {
-    padding-bottom: max(9.6rem, 20vh);
-    align-items: end;
-  }
-
-  .grid-container--home h1 {
-    font-size: 2.8rem;
-  }
-}
-
 .sr-only {
   position: absolute;
   width: 1px;
@@ -296,7 +243,7 @@ p {
 .numbered-title {
   color: hsl(var(--clr-white));
   font-family: var(--fm-sans-condensed);
-  font-size: var(--fs-500);
+  font-size: clamp(1.6rem, 3vw, 2.8rem);
   letter-spacing: 4.72px;
   text-transform: uppercase;
 }
@@ -610,5 +557,102 @@ p {
   .home {
     background-image: url("./assets/home/background-home-desktop.jpg");
     background-position: center;
+  }
+}
+
+/* grid layout */
+
+.grid-container {
+  display: grid;
+  place-items: center;
+  padding-inline: 1.6rem;
+  padding-bottom: 6.4rem;
+
+  text-align: center;
+}
+
+.grid-container > * {
+  max-width: 45ch;
+}
+
+.grid-container--home h1 {
+  font-size: 1.6rem;
+}
+
+@media (min-width: 35em) {
+  .grid-container--home h1 {
+    font-size: 2rem;
+  }
+}
+
+/* destination */
+
+.grid-container--destination {
+  --flow-space: 2rem;
+
+  grid-template-areas:
+    "title"
+    "image"
+    "tabs"
+    "content";
+}
+
+.grid-container--destination > .numbered-title {
+  grid-area: title;
+}
+
+.grid-container--destination > .planet-image {
+  max-width: 60%;
+  grid-area: image;
+}
+
+.grid-container--destination > .tab-list {
+  grid-area: tabs;
+}
+
+.grid-container--destination > .planet-info {
+  grid-area: content;
+}
+
+.planet-info__text {
+  margin-bottom: 3.2rem;
+  padding-bottom: 3.2rem;
+  border-bottom: 1px solid hsla(var(--clr-white) / 0.25);
+}
+
+.planet-info__stats {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+@media (min-width: 45em) {
+  .grid-container {
+    display: grid;
+    column-gap: var(--container-gap, 3.2rem);
+    grid-template-columns: minmax(1.6rem, 1fr) repeat(2, minmax(0, 64rem)) minmax(
+        1.6rem,
+        1fr
+      );
+    padding-inline: unset;
+
+    text-align: left;
+  }
+
+  .grid-container > *:first-child {
+    grid-column: 2 / 3;
+  }
+
+  .grid-container > *:last-child {
+    grid-column: 3 / 4;
+  }
+
+  .grid-container--home {
+    padding-bottom: max(9.6rem, 20vh);
+    align-items: end;
+  }
+
+  .grid-container--home h1 {
+    font-size: 2.8rem;
   }
 }
