Feat: Add different layouts for crew page
- mobile layout
- tablet layout
- desktop layout

--- a/index.css
+++ b/index.css
@@ -492,7 +492,7 @@ p {
 }
 
 .dot-indicators > button {
-  --size: 1.5rem;
+  --size: clamp(1rem, 1.5vw, 1.5rem);
 
   width: var(--size);
   height: var(--size);
@@ -626,6 +626,47 @@ p {
   justify-content: center;
 }
 
+/* crew */
+
+.grid-container--crew {
+  --flow-space: 2rem;
+
+  grid-template-areas:
+    "title"
+    "image"
+    "dots"
+    "content";
+}
+
+.grid-container--crew > .numbered-title {
+  grid-area: title;
+}
+
+.grid-container--crew > .crew-image {
+  grid-area: image;
+  border-bottom: 1px solid hsla(var(--clr-white) / 0.25);
+}
+
+.crew-info h2 {
+  color: hsl(var(--clr-white) / 0.5);
+}
+
+@media (max-width: 35em) {
+  .grid-container--crew > .crew-image img {
+    margin-inline: auto;
+    max-width: 80%;
+  }
+}
+
+.grid-container--crew > .dot-indicators {
+  grid-area: dots;
+}
+
+.grid-container--crew > .crew-info {
+  --flow-space: 1.6rem;
+  grid-area: content;
+}
+
 @media (min-width: 35em) {
   .grid-container--destination {
     padding-top: clamp(4rem, 4vh, 6rem);
@@ -643,6 +684,27 @@ p {
     flex-direction: row;
 
     justify-content: space-evenly;
+  }
+
+  .grid-container--crew {
+    padding-top: clamp(4rem, 4vh, 6rem);
+
+    grid-template-areas:
+      "title"
+      "content"
+      "dots"
+      "image";
+
+    padding-bottom: unset;
+  }
+
+  .grid-container--crew > .numbered-title {
+    margin-bottom: min(3vh, 6.4rem);
+    justify-self: start;
+  }
+
+  .grid-container--crew > .crew-image {
+    align-self: end;
   }
 }
 
@@ -702,5 +764,24 @@ p {
 
     justify-self: center;
     max-width: 80%;
+  }
+
+  .grid-container--crew {
+    grid-template-areas:
+      ". title title ."
+      ". content image ."
+      ". dots image .";
+
+    align-content: start;
+  }
+
+  .grid-container--crew > * {
+    max-width: 48ch;
+    justify-self: start;
+  }
+
+  .grid-container--crew > .crew-image {
+    justify-self: center;
+    width: max(30rem, 100%);
   }
 }
