--- a/index.css
+++ b/index.css
@@ -547,9 +547,27 @@ p {
   background-position: bottom center;
 }
 
+.destination {
+  background-image: url("./assets/destination/background-destination-mobile.jpg");
+  background-position: center;
+}
+
+.crew {
+  background-image: url("./assets/crew/background-crew-mobile.jpg");
+  background-position: bottom center;
+}
+
 @media (min-width: 35em) {
   .home {
     background-image: url("./assets/home/background-home-tablet.jpg");
+  }
+
+  .destination {
+    background-image: url("./assets/destination/background-destination-tablet.jpg");
+  }
+
+  .crew {
+    background-image: url("./assets/crew/background-crew-tablet.jpg");
   }
 }
 
@@ -557,6 +575,15 @@ p {
   .home {
     background-image: url("./assets/home/background-home-desktop.jpg");
     background-position: center;
+  }
+
+  .destination {
+    background-image: url("./assets/destination/background-destination-desktop.jpg");
+  }
+
+  .crew {
+    background-image: url("./assets/crew/background-crew-desktop.jpg");
+    background-position: right center;
   }
 }
 
